--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,20 @@
 # Header
 menu:
   Home: /
+  About: /about
   Archives: /archives
-  Tags: /tags
-  Categories: /categories
-  Github:
-    url: https://github.com/klugjo/hexo-theme-clean-blog
-    icon: github
+  Privacy: /privacy
+  # Tags: /tags
+  # Categories: /categories
+  # Github:
+  #   url: https://github.com/klugjo/hexo-theme-clean-blog
+  #   icon: github
 
 # Title on top left of menu. Leave empty to use main blog title
-menu_title: Configurable Title
+menu_title: aStewart.voyage
 
 # URL of the Home page image
-index_cover: http://www.codeblocq.com/assets/projects/hexo-theme-clean-blog/img/home-bg.jpg
+index_cover: /images/home-bg.jpg
 
 # Default post title
 default_post_title: Untitled
@@ -20,7 +22,7 @@ default_post_title: Untitled
 # Comments. Choose one by filling up the information
 comments:
   # Disqus comments
-  disqus_shortname:
+  disqus_shortname: astewart-voyage
   # Facebook comments
   facebook:
     appid:
@@ -28,7 +30,7 @@ comments:
     comment_colorscheme: light
 
 # Google Analytics Tracking ID
-google_analytics:
+google_analytics: UA-16675684-7
 
 # Addthis ID
 addthis:
@@ -40,7 +42,7 @@ favicon:
 twitter_url:
 twitter_handle:
 facebook_url:
-github_url: https://github.com/klugjo/hexo-theme-clean-blog
+github_url: https://github.com/astewartdesign
 gitlab_url:
 linkedin_url:
 mailto:
